syntax = "proto3";

package com.banica.with.pumpkin;

option java_package = "com.market";
option java_multiple_files = true;

message MarketDataRequest{
  string clientId = 1;
  string itemName = 2;
}

message CatalogueRequest{
  string clientId = 1;
}

message CatalogueResponse{
  repeated string foodItems = 1;
}

message TickResponse{
  string itemName = 1;
  uint64 quantity = 2;
  double price = 3;
  int64 timestamp = 4;
  Origin origin = 5;
}

enum Origin{
  UNSPECIFIED = 0;
  AMERICA = 1;
  ASIA = 2;
  EUROPE = 3;
}

service MarketService{
  rpc subscribeForItem(MarketDataRequest) returns (stream TickResponse);
  rpc requestCatalogue(CatalogueRequest) returns (CatalogueResponse);
}